# AetherSDR

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  README.md
.github/docker/: Dockerfile
.github/workflows/: appimage.yml  ci.yml  codeql.yml  macos-dmg.yml  macos-installer.yml  windows-installer.yml
docs/: flex-meter-learnings.md  tx-audio-signal-path.md
resources/help/: aethersdr-help.md  getting-started.md  understanding-data-modes.md
src/: main.cpp
src/core/: AudioEngine.cpp  AudioEngine.h  CwDecoder.cpp  CwDecoder.h  CwSidetoneGenerator.cpp  CwSidetoneGenerator.h  CwxLocalKeyer.cpp  CwxLocalKeyer.h  DeviceDiagnostics.cpp  DeviceDiagnostics.h  FlexControlManager.h  FreeDvClient.cpp  FreeDvClient.h  HidEncoderManager.h  MacNRFilter.cpp  MacNRFilter.h  PanadapterStream.cpp  PanadapterStream.h  PipeWireAudioBridge.cpp  PropForecastClient.cpp  PropForecastClient.h  QsoRecorder.cpp  QsoRecorder.h  RADEEngine.cpp  RADEEngine.h  RadioDiscovery.cpp  RadioDiscovery.h  SerialPortController.cpp  SerialPortController.h  SpectralNR.h  TciProtocol.cpp  VirtualAudioBridge.cpp  VirtualAudioBridge.h
src/gui/: AetherDspDialog.cpp  AetherDspDialog.h  AetherDspWidget.cpp  AetherDspWidget.h  AppletPanel.cpp  AppletPanel.h  ClientChainApplet.cpp  ClientChainApplet.h  ClientCompApplet.cpp  ClientDeEssApplet.cpp  ClientEqCurveWidget.cpp  ClientEqCurveWidget.h  ClientEqEditor.cpp  ClientGateApplet.cpp  ClientLevelMeter.cpp  ClientLevelMeter.h  ClientPuduApplet.cpp  ClientReverbApplet.cpp  ClientRxChainWidget.cpp  ClientRxChainWidget.h  ClientRxDspApplet.cpp  ClientRxDspApplet.h  ClientTubeApplet.cpp  ClientTubeEditor.cpp  ClientTubeEditor.h  ConnectionPanel.cpp  ConnectionPanel.h  CwxPanel.cpp  DxClusterDialog.cpp  DxClusterDialog.h  FramelessResizer.cpp  FramelessResizer.h  GuardedSlider.h  MainWindow.cpp  MainWindow.h  MemoryDialog.cpp  NetworkDiagnosticsDialog.cpp  NetworkDiagnosticsDialog.h  PanFloatingWindow.cpp  PanadapterApplet.cpp  (+23 more)
src/gui/containers/: ContainerManager.cpp  FloatingContainerWindow.cpp
src/models/: AntennaGeniusModel.cpp  AntennaGeniusModel.h  CwxModel.cpp  CwxModel.h  MeterModel.cpp  MeterModel.h  RadioModel.cpp  RadioModel.h  SliceModel.cpp  SliceModel.h  TnfModel.cpp  XvtrPolicy.cpp  XvtrPolicy.h
tests/: cw_sidetone_test.cpp  device_diagnostics_test.cpp  meter_model_test.cpp  xvtr_policy_test.cpp
